SAA-1000: Prevent table cell overflow

--- a/frontend/utilities/_table.scss
+++ b/frontend/utilities/_table.scss
@@ -3,3 +3,7 @@
     width: 120px;
   }
 }
+
+.govuk-table__cell {
+  word-break: break-word;
+}
